[package]
name = "floki"
version = "0.1.0"
authors = ["arthurprs <arthurprs@gmail.com>"]

[dependencies]
rustc-serialize = "*"
log = "*"
env_logger = "*"
mio = "0.4.*"
nix = "0.3.6"
libc = "*"
toml = "*"
threadpool = "*"
time = "*"
num_cpus = "*"
fnv = "*"
twox-hash = "*"
spin = "*"
rand = "*"

[dependencies.linked-hash-map]
git="https://github.com/contain-rs/linked-hash-map.git"

[dependencies.tendril]
git="https://github.com/arthurprs/tendril.git"
rev="11149061dac78e7dd73f19b5a02d521547d7a443"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 8

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
